--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>For Someone Special</title>
+  <title>Para sa bading kong bestie</title>
   <link rel="stylesheet" href="flower.css"> 
   <style>
     /* Start button styles */
@@ -492,4 +492,5 @@
 
 
 </body>
+
 </html>
