--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   </div>
 
   <!-- Final text and image -->
-  <div id="final-text" class="fade-text hidden">At sa ating pinaka unang meet up.</div>
+  <div id="final-text" class="fade-text hidden">Remember our first ever meet up?</div>
   <img id="final-image" class="fade-img hidden" src="images/nine.jpg" alt="Forever">
   <div id="final-message" class="fade-text hidden">I miss you bading!</div>
 
@@ -494,5 +494,6 @@
 </body>
 
 </html>
+
 
 
